Added weapons implementation and introduced some fixes
Change Log:
1) Created a Weapon class, as a base class for all weapons, e.g. ElectronProjectile, etc.
2) Implemented ElectronProjectile and added support for screen drawing through ElectronProjectileDrawable.
3) Improved the Component model, by allowing only one constructor that receives data.
4) Made some changes to Game#addComponent() methods in accordance to the changes in the Component model, as well as making the methods return the id of the newly created Component.
 5) Added new Game#getComponent() method to retrieve a Component by its id.
 6) In KineticComponent, merged the definitions of setVelocity(), calculateVelocity(), calculateDirection() to a new method setVelocity(), that calculates the velocity's direction and scales it to a given speed scalar.
 7) Added implementation for parsing `weapon_types.json` in GameRepository, as well as retrieving the parsed WeaponType's.
8) Added new implementation for WeaponType.
9) Added new ReactiveX lint: RxLint (the project's `build.gradle` dependencies).
10) Fixed different lints in the project (deprecated code, spell checking, final additions, etc.).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,13 @@ dependencies {
     // explicitly depend on RxJava's latest version for bug fixes and new features).
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
 
+    // RxLint (RxJava lint)
+    lintChecks 'nl.littlerobots.rxlint:detector:1.7.5'
+
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
 
+    // Testing (JUnit and Espresso)
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
